# gpt-cli

./: Cargo.toml  README.md
src/: file.rs  main.rs  reqwest.rs
src/reqwest/: correction.rs  default_completion.rs  translation.rs
src/structs/: cli.rs  gpt.rs  mod.rs
